:lipstick: Header has a min-height to prevent disappearing on smaller screens, minor color tweaks

--- a/sass/config.scss
+++ b/sass/config.scss
@@ -17,7 +17,8 @@ $font-active-1: rgb(172, 255, 241);
 $background-color-white: white;
 $background-color-1: rgb(14, 142, 121);
 $background-hover-1: rgb(4, 110, 93);
-$background-color-2: rgb(190, 240, 229);
+$background-color-2: rgb(209, 245, 238);
+$background-hover-2: rgb(21, 146, 125);
 
 $header-color-1: rgb(14, 142, 121);
 $header-hover-1: rgb(4, 110, 93);
@@ -33,4 +34,5 @@ $shadow-color-1: rgba(52, 167, 147, 0.6);
 $component-drop-shadow: 0px 0.3rem 0;
 
 $pad-standard: 1rem;
-$margin-standard: 1.6rem;
+$margin-standard: 2rem;
+$radius-minimal: 0.3rem;
