--- a/src/containers/Header-Unused/Header.scss
+++ b/src/containers/Header-Unused/Header.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   background-color: $header-color-1;
+  min-height: fit-content;
 
   .title-wrap {
     display: flex;
