--- a/src/containers/MoodEntry/MoodEntry.scss
+++ b/src/containers/MoodEntry/MoodEntry.scss
@@ -3,10 +3,9 @@
 
 .component-mood-entry {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   margin: auto;
   font-family: $primary-font, $font-type;
-  // overflow-y: scroll;
 
   .select-emotion {
     display: flex;
