--- a/src/containers/NotesActions/NotesActions.scss
+++ b/src/containers/NotesActions/NotesActions.scss
@@ -11,9 +11,11 @@
   height: 100%;
 
   .title {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-weight: bold;
+    text-align: left;
     padding: $pad-standard $pad-standard / 2 $pad-standard $pad-standard / 2;
+    width: 95%;
   }
 
   .actions-wrap {
@@ -25,7 +27,7 @@
       flex-direction: row;
       flex-wrap: wrap;
       background-color: $background-color-2;
-      border-radius: 0.3rem;
+      border-radius: $radius-minimal;
       box-shadow: $component-drop-shadow $shadow-color-1;
       width: 100%;
       height: 100%;
@@ -38,17 +40,19 @@
         align-items: center;
         transition: all 50ms ease-in;
         margin-top: $margin-standard / 2;
-        margin-bottom: $margin-standard / 2;
         border-radius: 3rem;
         margin-left: 1%;
         margin-right: 1%;
         padding-left: 1%;
         padding-right: 1%;
         flex-basis: 29%;
+        height: 20%;
+
+        &:last-child { margin-bottom: $margin-standard / 2; }
 
         .name {
           width: 75%;
-          text-align: left;
+          text-align: center;
         }
         
         .fa-icon {
@@ -56,9 +60,44 @@
         }
 
         &:hover, &:active {
-          background-color: $background-hover-1;
+          background-color: $background-hover-2;
           color: $font-active-1;
         }
+      }
+    }
+  }
+
+  .notes-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: $background-color-2;
+    border-radius: $radius-minimal;
+    box-shadow: $component-drop-shadow $shadow-color-1;
+    margin-top: $margin-standard * 2;
+    width: 85%;
+    height: 60%;
+
+    .title {
+      font-size: 1.1rem;
+      text-align: left;
+      width: 90%;
+    }
+
+    textarea {
+      font-size: 0.9rem;
+      color: $font-hover-1;
+      border-radius: $radius-minimal;
+      resize: none;
+      border: none;
+      outline: none;
+      padding: 3%;
+      width: 82%;
+      height: 77%;
+
+      &::placeholder {
+        color: $font-color-1;
       }
     }
   }
